cluster/app/opencti-elasticsearch/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opencti-elasticsearch
  labels:
    eck.k8s.elastic.co/tenant: opencti-elasticsearch
